<resources>
    <string name="app_name">100days</string>

    <string name="action_my_goals">My goals</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">SAVE</string>
    <string name="action_exit">Exit</string>

    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help and FAQ</string>
    <string name="action_about">About</string>

    <string name="time_picker_dialog_cancel">Cancel</string>
    <string name="time_picker_dialog_done">Done</string>

    <string name="pref_category_interface">Interface</string>
    <string name="pref_press_and_hold_to_check">Press-and-hold to toggle checkmarks</string>
    <string name="pref_press_and_hold_to_check_summary">Helps avoiding accidental toggles</string>
    <string name="pref_checkmark_orientation">Checkmark orientation</string>
    <string name="pref_checkmark_orientation_summary">Checkmarks will be displayed %s on the main screen</string>
    <string name="pref_first_day_of_week">First day of week</string>
    <string name="pref_first_day_of_week_summary">%s</string>
    <string name="pref_calendar_regular_days_order">Regular day order</string>
    <string name="pref_calendar_regular_days_order_summary">Days will be displayed from top to bottom</string>

    <string name="hint_press_and_hold">Press-and-hold to check or uncheck</string>
    <string name="hint_empty_goals_list">Start by adding some goals or habits</string>
    <string name="hint_empty_archive">Archive is empty</string>

    <string name="title_edit_goal">Edit goal</string>
    <string name="warning_edit_goal">All unsaved changes will be lost.</string>
    <string name="title">Goal title</string>
    <string name="repeat">Repeat</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="alarm_item_off">Off</string>

    <string name="notification_question">Any progress on your goal?</string>

    <string-array name="repeat_values_array">
        <item>Every day</item>
        <item>Every week</item>
        <item>2 times a week</item>
        <item>3 times a week</item>
        <item>5 times a week</item>
        <item>Custom…</item>
    </string-array>

    <string-array name="repeat_times_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="repeat_period_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="alarm_values_array">
        <item>Off</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Custom…</item>
    </string-array>

    <string-array name="tips_array">
        <item>Drag and drop goals on the main screen to reorder them</item>
        <item>Use reminders and you\'ll never forget to complete a task</item>
        <item>Choose SMART goals - Specific, Measurable, Attainable, Realistic, and Time Bound</item>
    </string-array>

    <string name="left_to_right_orientation">left_to_right</string>

    <string-array name="checkmark_orientation_alias_array">
        <item>@string/left_to_right_orientation</item>
        <item>right_to_left</item>
    </string-array>

    <string-array name="checkmark_orientation_array">
        <item>left-to-right</item>
        <item>right-to-left</item>
    </string-array>

    <string-array name="first_day_of_week_alias_array">
        <item>@string/day_of_week_monday</item>
        <item>sunday</item>
    </string-array>

    <string-array name="first_day_of_week_array">
        <item>Monday</item>
        <item>Sunday</item>
    </string-array>
    <string name="day_of_week_monday">monday</string>

    <string-array name="days_of_week_array">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <string-array name="days_of_week_sunday_array">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>

    <string-array name="faq_array">
        <item>How can I check the past days?</item>
        <item>Clicking on the goal will open goal details along with calendar view. Tap on the days to check/uncheck.</item>

        <item>Sometimes I accidentally toggle checkmarks. How can I avoid this?</item>
        <item>Go to <i>Settings</i> and enable \"press-and-hold to toggle checkmarks\" preference.</item>

        <item>How can I reorder the goals?</item>
        <item>Press-and-hold the goal and drag it to the desired place.</item>

        <item>I have more questions. What should I do?</item>
        <item>Please, feel free to contact the developer at <b>glad2cu@gmail.com</b></item>
    </string-array>

</resources>
