<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toolbar.MainActivity">

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:title="@string/action_unarchive"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/action_archive"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="always"/>

</menu>