<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/goals" android:checkableBehavior="single">

        <item android:id="@+id/action_goals"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/action_my_goals"
            />

        <item android:id="@+id/action_archive"
            android:icon="@drawable/ic_archive_white_24dp"
            android:title="@string/action_archive"
            />

    </group>

    <group android:id="@+id/settings" android:checkableBehavior="single">

        <item android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            />

    </group>

    <group android:id="@+id/about" android:checkableBehavior="single">

        <item android:id="@+id/action_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help"
            />

        <item android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/action_about"
            />

    </group>
</menu>